# Flipwiz

./: .gitignore  CMakeLists.txt  FlipWiz.cpp  FlipWiz.h  README.md  application.manifest
src/: CMakeLists.txt  RCa06572  main.cpp  resource.h  resources.rc  ui_elements.cpp  ui_elements.h  ui_lib.cpp  ui_lib.h  ui_messages.cpp  ui_messages.h  ui_proc.cpp  ui_proc.h  ui_set.h  ui_styles.cpp  ui_styles.h  version.h
tests/: CMakeLists.txt
